--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <body>
-<link rel="stylesheet" type="text\css" href="styles.css">
+<link rel="stylesheet" type="text/css" href="styles.css">
 <ul>
 <li>John  Storm <img src='http://portal.starterleague.com//media/W1siZiIsIjIwMTMvMDcvMDgvMjIvNTMvNTIvODUyL2pvaG4uanBnIl1d/john.jpg' width=100></li>
 <li>Diane  Bell <img src='http://portal.starterleague.com//media/W1siZiIsIjIwMTMvMDcvMDgvMjIvNTMvMjMvOTkzL2RpYW5lLmpwZyJdXQ/diane.jpg' width=100></li>
